--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -32,7 +32,7 @@ $sparrow-patc: #df77f9;
 $sparrow-opt: #f15ea5;
 $sparrow-arc: #8a9299;
 $sparrow-request-body: #8a9299;
-$sparrow-send-button: #3670F7;
+$sparrow-send-button: #85c2ff;
 $sparrow-send-hoverbutton: #04416d;
 $sparrow-button-background: #2d2c2c;
 $sparrow-button-color: #e5e5e5;
