--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -70,6 +70,11 @@ $sparrow-active-sync:#8DC599;
 $deleted-api-method: #939699;
 $button-active: #1D3650;
 $right-border: #313233;
+$sparrow-dropdown: #3670F7;
+$sparrow-dropdown-hover: #5980DC;
+$sparrow-dropdown-container: #22232E;
+$sparrow-dropdown-option-hover: #2E2F3D;
+$sparrow-dropdown-option-active: #1C1D27;
 
 
 :root {
@@ -131,6 +136,11 @@ $right-border: #313233;
   --deleted-api-method: #{$deleted-api-method};
   --button-active: #{$button-active};
   --right-border: #{$right-border};
+  --dropdown-button: #{$sparrow-dropdown};
+  --dropdown-hover: #{$sparrow-dropdown-hover};
+  --dropdown-container: #{$sparrow-dropdown-container};
+  --dropdown-option-hover: #{$sparrow-dropdown-option-hover};
+  --dropdown-option-active: #{$sparrow-dropdown-option-active};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
@@ -173,7 +183,12 @@ $theme-colors: map-merge(
     "sparrowBottomBorder": $sparrow-bottom-border,
     "emailInviteBackgroundColor":$sparrow-email-invite-bg-color,
     "dropdownBorderColor":$sparrow-dropdown-border-color,
-    "activeSyncBtn": $sparrow-active-sync
+    "activeSyncBtn": $sparrow-active-sync,
+    "dropdownButton": $sparrow-dropdown,
+    "dropdownHover": $sparrow-dropdown-hover,
+    "dropdownContainer": $sparrow-dropdown-container,
+    "dropdownOptionHover": $sparrow-dropdown-option-hover,
+    "dropdownOptionActive": $sparrow-dropdown-option-active,
   )
 );
 
