--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -69,6 +69,8 @@ $sparrow-right-click-menu:#232527;
 $sparrow-active-sync:#8DC599;
 $deleted-api-method: #939699;
 $button-active: #1D3650;
+$sparrow-nav-bar-active-slash: #4661FA;
+$sparrow-nav-bar-hover-background: #29303c;
 
 
 :root {
@@ -129,6 +131,8 @@ $button-active: #1D3650;
   --active-sync-btn: #{$sparrow-active-sync};
   --deleted-api-method: #{$deleted-api-method};
   --button-active: #{$button-active};
+  --nav-bar-active-slash: #{$sparrow-nav-bar-active-slash};
+  --nav-bar-hover-background: #{$sparrow-nav-bar-hover-background};
 }
 
 // $button-color: linear-gradient(270deg, #6147ff -1.72%, #1193f0 100%);
