--- a/src/packages/@app/components/styles.css
+++ b/src/packages/@app/components/styles.css
@@ -7,7 +7,6 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
-
-  /* overflow: hidden; */
-  /* background: #313233; */
+  user-drag: none; /* Standard syntax */
+  -webkit-user-drag: none; /* Safari and older versions of Chrome */
 }
