feat: add factory class for init tab [#802]
Signed-off-by: Md Asif Raza <itsmdasifraza@gmail.com>

--- a/src/packages/@app/components/styles.css
+++ b/src/packages/@app/components/styles.css
@@ -7,6 +7,9 @@
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+img,
+a {
   user-drag: none; /* Standard syntax */
   -webkit-user-drag: none; /* Safari and older versions of Chrome */
 }
