--- a/src/packages/@app/styles/style.scss
+++ b/src/packages/@app/styles/style.scss
@@ -82,9 +82,17 @@ $sparrow-tab-request-default: #324035;
 $sparrow-tab-request-text-default: #4A4D4F;
 $sparrow-tab-unsave-icon: #CB4A4A;
 
+$sparrow-bg-container: #8989890D;
+$sparrow-bg-container-border: #313233;
+$sparrow-bg-container-one: #1392F0;
+$sparrow-bg-container-two: #4165F9;
+$sparrow-bg-container-three: #5652FD;
+$sparrow-bg-container-four: #376FF7;
+
 $theme-grey-ffffff:#ffffff;
 $theme-grey-e5e5e5:#e5e5e5;
 $theme-grey-8A9299:#8A9299;
+$theme-grey-636566:#636566;
 $theme-grey-45494D:#45494D;
 $theme-grey-313233:#313233;
 $theme-grey-272727:#272727;
@@ -95,6 +103,7 @@ $theme-grey-151515:#151515;
 $theme-grey-000000:#000000;
 
 $theme-blue-9CDCFE:#9CDCFE;
+$theme-blue-85C2FF:#85C2FF;
 $theme-blue-1193F0:#1193F0;
 $theme-blue-5980DC:#5980DC;
 $theme-blue-3670F7:#3670F7;
@@ -192,20 +201,28 @@ $theme-red-312325:#312325;
   --tab-request-divider-line: #{$sparrow-key-value-pair};
   --tab-unsave-icon: #{$sparrow-tab-unsave-icon};
 
+  --bg-conatiner: #{$sparrow-bg-container};
+  --bg-container-border: #{$sparrow-bg-container-border};
+  --bg-container-one: #{$sparrow-bg-container-one};
+  --bg-container-two: #{$sparrow-bg-container-two};
+  --bg-container-three: #{$sparrow-bg-container-three};
+  --bg-container-four: #{$sparrow-bg-container-four};
+
   //
   //
   // Sets text color 
   //
   //
   --text-primary-100 : #{$theme-blue-9CDCFE};
+  --text-primary-150 : #{$theme-blue-85C2FF};
   --text-primary-200 : #{$theme-blue-1193F0};
   --text-primary-300 : #{$theme-blue-3670F7};
   --text-primary-400 : #{$theme-blue-0B5ED7};
-  
   --text-secondary-100 : #{$theme-grey-ffffff};
   --text-secondary-150 : #{$theme-grey-e5e5e5};
   --text-secondary-200 : #{$theme-grey-8A9299};
   --text-secondary-300 : #{$theme-grey-45494D};
+  --text-secondary-350 : #{$theme-grey-636566};
   --text-secondary-400 : #{$theme-grey-313233};
   --text-secondary-500 : #{$theme-grey-272727};
   --text-secondary-600 : #{$theme-grey-212222};
@@ -354,7 +371,14 @@ $theme-colors: map-merge(
     "dropdownContainer": $sparrow-dropdown-container,
     "dropdownOptionHover": $sparrow-dropdown-option-hover,
     "dropdownOptionActive": $sparrow-dropdown-option-active,
-    "saveButtonLine": $sparrow-send-button-line
+    "saveButtonLine": $sparrow-send-button-line,
+    
+    "sparrowBgContainer": $sparrow-bg-container,
+    "sparrowBgContainerBorder": $sparrow-bg-container-border,
+    "sparrowBgContainerOne": $sparrow-bg-container-one,
+    "sparrowBgContainerTwo": $sparrow-bg-container-two,
+    "sparrowBgContainerThree": $sparrow-bg-container-three,
+    "sparrowBgContainerFour": $sparrow-bg-container-four
   )
 );
 
@@ -391,6 +415,7 @@ $sparrow-border-radius: (
 // Define a map for text colors
 $sparrow-text-colors: (
   primary-100 : $theme-blue-9CDCFE,
+  primary-150 : $theme-blue-85C2FF,
   primary-200 : $theme-blue-1193F0,
   primary-300 : $theme-blue-3670F7,
   primary-400 : $theme-blue-0B5ED7,
@@ -398,6 +423,7 @@ $sparrow-text-colors: (
   secondary-100 : $theme-grey-ffffff,
   secondary-150 : $theme-grey-e5e5e5,
   secondary-200 : $theme-grey-8A9299,
+  secondary-250 : $theme-grey-636566,
   secondary-300 : $theme-grey-45494D,
   secondary-400 : $theme-grey-313233,
   secondary-500 : $theme-grey-272727,
